base/hnc/validatingwebhookconfiguration.k8s.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: hnc-validating-webhook-configuration
webhooks:
  - clientConfig:
      caBundle: Cg==
      service:
        name: hnc-webhook-service
        namespace: hnc-system
        path: /validate-hnc-x-k8s-io-v1alpha2-subnamespaceanchors
    failurePolicy: Fail
    name: subnamespaceanchors.hnc.x-k8s.io
    rules:
      - apiGroups:
          - hnc.x-k8s.io
        apiVersions:
          - v1alpha2
        operations:
          - CREATE
          - DELETE
        resources:
          - subnamespaceanchors
    sideEffects: None
  - clientConfig:
      caBundle: Cg==
      service:
        name: hnc-webhook-service
        namespace: hnc-system
        path: /validate-hnc-x-k8s-io-v1alpha2-hierarchyconfigurations
    failurePolicy: Fail
    name: hierarchyconfigurations.hnc.x-k8s.io
    rules:
      - apiGroups:
          - hnc.x-k8s.io
        apiVersions:
          - v1alpha2
        operations:
          - CREATE
          - UPDATE
        resources:
          - hierarchyconfigurations
    sideEffects: None
  - clientConfig:
      caBundle: Cg==
      service:
        name: hnc-webhook-service
        namespace: hnc-system
        path: /validate-hnc-x-k8s-io-v1alpha2-hncconfigurations
    failurePolicy: Fail
    name: hncconfigurations.hnc.x-k8s.io
    rules:
      - apiGroups:
          - hnc.x-k8s.io
        apiVersions:
          - v1alpha2
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - hncconfigurations
    sideEffects: None
  - clientConfig:
      caBundle: Cg==
      service:
        name: hnc-webhook-service
        namespace: hnc-system
        path: /validate-v1-namespace
    failurePolicy: Fail
    name: namespaces.hnc.x-k8s.io
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - DELETE
          - CREATE
          - UPDATE
        resources:
          - namespaces
    sideEffects: None
  - clientConfig:
      caBundle: Cg==
      service:
        name: hnc-webhook-service
        namespace: hnc-system
        path: /validate-objects
    failurePolicy: Ignore
    name: objects.hnc.x-k8s.io
    rules:
      - apiGroups:
          - "*"
        apiVersions:
          - "*"
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - "*"
    sideEffects: None
    timeoutSeconds: 2
